--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mammoth": "^1.4.17",
     "node-fetch": "^2.6.1",
-    "pdfjs-dist": "^2.8.335"
+    "pdfjs-dist": "^2.8.335",
+    "word-extractor": "^1.0.4"
   }
 }
